syntax = "proto3";

package billingsevents;

option go_package = "./proto;billing";

enum EventType {
  EventTypeUnknown = 0;
  EventTypeSubscribedTier = 1;
}

message Event {
  EventType type = 1;
  SubscribedTier subscribed_tier = 2;
}

message SubscribedTier {
  string customer_id = 1;
  string tier_id = 2;

}

